INCLUDES = -I$(top_srcdir)/include

AUTOMAKE_OPTIONS = gnu

noinst_LTLIBRARIES = libcxxcryptospec.la

cxxcryptospecdir=$(pkgincludedir)/c++/crypto/spec

libcxxcryptospec_la_SOURCES =\
DHParameterSpec.cxx \
DHPrivateKeySpec.cxx \
DHPublicKeySpec.cxx \
IvParameterSpec.cxx \
PBEKeySpec.cxx \
SecretKeySpec.cxx
