INCLUDES = -I$(top_srcdir)/include

AUTOMAKE_OPTIONS = gnu

noinst_LTLIBRARIES = libcxxsecurityspec.la

cxxsecurityspecdir=$(pkgincludedir)/c++/security/spec

libcxxsecurityspec_la_SOURCES =\
DSAParameterSpec.cxx \
DSAPrivateKeySpec.cxx \
DSAPublicKeySpec.cxx \
EncodedKeySpec.cxx \
RSAKeyGenParameterSpec.cxx \
RSAPrivateCrtKeySpec.cxx \
RSAPrivateKeySpec.cxx \
RSAPublicKeySpec.cxx
